--- a/templates/Home.html
+++ b/templates/Home.html
@@ -9,7 +9,7 @@
 <title>Viral Nova - Trending Stories and Pictures Around the Web</title>
 
 
-<link rel="icon" href="http://www.viralnova.com/wp-content/uploads/2013/11/favicon2.ico" type="image/x-icon">
+<link rel="icon" href="../static/image/favicon.png" type="image/x-icon">
 
 
 <!--iOS/android/handheld specific -->
@@ -24,15 +24,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 
-<link rel="stylesheet" type="text/css" media="all"
-      href="../static/css/home/style.css">
-<link rel="pingback" href="http://www.viralnova.com/xmlrpc.php">
-<script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script>
-<script id="twitter-wjs" src="http://platform.twitter.com/widgets.js"></script>
-<script id="facebook-jssdk" src="http://connect.facebook.net/en_US/all.js#xfbml=1&appId=519565441436071"></script>
-<!--[if lt IE 9]>
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
+<link rel="stylesheet" type="text/css" media="all" href="../static/css/home/style.css">
 
 <!--start fonts-->
 
@@ -61,8 +53,6 @@
 
 
 <!--end fonts-->
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 
 <!--end slider-->
 
@@ -103,61 +93,16 @@
 </style>
 
 
-<link rel="alternate" type="application/rss+xml" title="Viral Nova » Feed" href="http://www.viralnova.com/feed/">
-<link rel="alternate" type="application/rss+xml" title="Viral Nova » Comments Feed"
-      href="http://www.viralnova.com/comments/feed/">
-<link rel="stylesheet" id="share_modal-css"
-      href="../static/css/home/modal.css" type="text/css" media="all">
-<link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://www.viralnova.com/xmlrpc.php?rsd">
-<link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://content4.viralnova.com/wp-includes/wlwmanifest.xml">
+<link rel="stylesheet" id="share_modal-css" href="../static/css/home/modal.css" type="text/css" media="all">
 <!--Theme by MyThemeShop.com-->
 
 <!-- All in One SEO Pack 2.1.5 by Michael Torbert of Semper Fi Web Design[313,330] -->
 <meta name="description" content="Read the latest stories going viral on the Web and discuss them with others.">
 
-<meta name="keywords"
-      content="life hacks,easy life hacks,easy tips,life tips,simple life hacks,rightrail,surreal photos,not photoshopped,nature photography,polar bears gather,polar bears manitoba,polar bear photography,shironeko,happy cat,adorable happy cat,sleeping cat,panorama glitches,nightmare fuel,camera glitches,animal advertisements,funny animal ads,funny ads,lovebird,disabled lovebird,benny the lovebird,animal rescue,rescue videos,splayed legs,caring for a lovebird,bathroom hacks, hacks, bathroom,dumb history, history, amazing history, cool history, blunders, mistake history,squirrel, miracle, poolman,lee thompson, cristo redentor, christ the redeemer,hilarious solutions,ridiculous problem solving,solved problems,recently extinct animals,beautiful extinct animals,animals gone extinct">
+<meta name="keywords" content="life hacks,easy life hacks,easy tips,life tips,simple life hacks,rightrail,surreal photos,not photoshopped,nature photography,polar bears gather,polar bears manitoba,polar bear photography,shironeko,happy cat,adorable happy cat,sleeping cat,panorama glitches,nightmare fuel,camera glitches,animal advertisements,funny animal ads,funny ads,lovebird,disabled lovebird,benny the lovebird,animal rescue,rescue videos,splayed legs,caring for a lovebird,bathroom hacks, hacks, bathroom,dumb history, history, amazing history, cool history, blunders, mistake history,squirrel, miracle, poolman,lee thompson, cristo redentor, christ the redeemer,hilarious solutions,ridiculous problem solving,solved problems,recently extinct animals,beautiful extinct animals,animals gone extinct">
 <meta name="p:domain_verify" content="61ac8ca0e840dfc3dba6f0210a3baa59">
-<link rel="next" href="http://www.viralnova.com/page/2/">
 
-<link rel="canonical"
-      href="./Viral Nova - Trending Stories and Pictures Around the Web_files/Viral Nova - Trending Stories and Pictures Around the Web.htm">
 <!-- /all in one seo pack -->
-<script type="text/javascript">
-    window._taboola = window._taboola || [];
-    _taboola.push({article: 'auto'});
-    !function (e, f, u) {
-        e.async = 1;
-        e.src = u;
-        f.parentNode.insertBefore(e, f);
-    }(document.createElement('script'), document.getElementsByTagName('script')[0], 'http://cdn.taboolasyndication.com/libtrc/viralnova/loader.js');
-</script>
-
-
-<script type="text/javascript">
-    var googletag = googletag || {};
-    googletag.cmd = googletag.cmd || [];
-    (function () {
-        var gads = document.createElement('script');
-        gads.async = true;
-        gads.type = 'text/javascript';
-        var useSSL = 'https:' == document.location.protocol;
-        gads.src = (useSSL ? 'https:' : 'http:') +
-                '//www.googletagservices.com/tag/js/gpt.js';
-        var node = document.getElementsByTagName('script')[0];
-        node.parentNode.insertBefore(gads, node);
-    })();
-</script>
-
-<script type="text/javascript">
-    googletag.cmd.push(function () {
-        googletag.defineSlot('/67702299/300x250_headline_mobile', [300, 250], 'div-gpt-ad-1396921301430-0').addService(googletag.pubads());
-        googletag.defineSlot('/67702299/Home-300x600-RR', [300, 600], 'div-gpt-ad-1396921301430-1').addService(googletag.pubads());
-        googletag.pubads().enableSingleRequest();
-        googletag.enableServices();
-    });
-</script>
-
 
 <meta name="google-site-verification" content="9hmXgJKZd0X9R9x-WZxDXSgtynd0q5twZnYwUjLMkmU">
 <style type="text/css">.trc_rbox_container {
@@ -10741,38 +10686,19 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
 </head>
 <body class="home blog main cat-3-id">
 <div id="fb-root"></div>
-<script>(function (d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s);
-    js.id = id;
-    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=519565441436071";
-    fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 <div id="header_area">
 
     <div class="page">
         <header id="header">
             <h1 id="logo">
-                <a href="./Viral Nova - Trending Stories and Pictures Around the Web_files/Viral Nova - Trending Stories and Pictures Around the Web.htm"><img
-                        src="../static/image/home/ViralNova1.png"
-                        alt="Viral Nova"></a>
+                <a href="#">
+                    <img src="../static/image/home/ViralNova1.png" alt="Viral Nova">
+                </a>
             </h1><!-- END #logo -->
             <!-- END #logo -->
 
             <div style="float: right;">
-
-                <iframe width="728" height="90" framespacing="0" frameborder="no" scrolling="no"
-                        id="ox_3272753390_537097509" name="ox_3272753390_537097509"></iframe>
-                <script type="text/javascript">
-                    var OX_ads = OX_ads || [];
-                    OX_ads.push({
-                        'auid': 537097509,
-                        'slot_id': 'slot537097509_8688378714'
-                    });
-                </script>
-                <script type="text/javascript" src="../static/js/file/jstag"></script>
-                <script type="text/javascript" id="ox_acj_3272753390" src="../static/js/file/acj"></script>
+                <iframe width="728" height="90" framespacing="0" frameborder="no" scrolling="no" id="ox_3272753390_537097509" name="ox_3272753390_537097509"></iframe>
             </div>
         </header>
         <!--#header-->
@@ -10781,20 +10707,6 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
     <!-- original nav goes here -->
 </div>
 <!--#header_area-->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
-<script src="./Viral Nova - Trending Stories and Pictures Around the Web_files/waypoints.min.js"
-        type="text/javascript"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#content_area').waypoint(function (direction) {
-            $('#article-finished').toggleClass('hiding', direction === "up");
-        }, {
-            offset: function () {
-                return $.waypoints('viewportHeight') - $(this).height() + 750;
-            }
-        });
-    });
-</script>
 <div id="content_area">
 <div class="page">
 <div id="content_box">
@@ -10805,16 +10717,18 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
     <div class="post-single post_box">
         <header>
             <div class="headline_area">
-                <h2 class="entry-title"><a href="http://www.viralnova.com/practical-life-hacks/"
-                                           title="These 22 Extremely Practical Life Hacks Will Make Everything Better. #14 Is Great."
-                                           rel="bookmark">These 22 Extremely Practical Life Hacks Will Make Everything
-                    Better. #14 Is Great.</a></h2>
+                <h2 class="entry-title">
+                    <a href="#" title="These 22 Extremely Practical Life Hacks Will Make Everything Better. #14 Is Great." rel="bookmark">These 22 Extremely Practical Life Hacks Will Make Everything Better. #14 Is Great.</a>
+                </h2>
 
                 <div class="headline_meta">
                     <!--<p class="theauthor">By <a rel="nofollow" href="http://www.viralnova.com/author/admin/" title="Posts by admin" rel="author">admin</a></p>-->
-                    <p class="themeta"><span class="thetime">June 6, 2014</span><span class="thecategories"><a
-                            href="http://www.viralnova.com/category/entertainment/"
-                            title="View all posts in Entertainment" rel="nofollow">Entertainment</a></span></p>
+                    <p class="themeta">
+                        <span class="thetime">June 6, 2014</span>
+                        <span class="thecategories">
+                            <a href="#" title="View all posts in Entertainment" rel="nofollow">Entertainment</a>
+                        </span>
+                    </p>
 
                 </div>
             </div>
@@ -10970,7 +10884,7 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
         <a href="http://www.viralnova.com/panorama-glitches/"
            title="This Terrifying Nightmare Fuel Was Found On People’s iPhones… What The?!" rel="nofollow">
             <div class="featured-thumbnail"><img width="590" height="200"
-                                                 src="./Viral Nova - Trending Stories and Pictures Around the Web_files/panorama19-590x200.jpg"
+                                                 src="../static/image/home/panorama19-590x200.jpg"
                                                  class="attachment-featured wp-post-image"
                                                  alt="19.) I&#39;ll never feel safe taking a bath again." title="">
             </div>
@@ -11008,7 +10922,7 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
            title="Here Are The 24 Most Ridiculously Clever Advertisements… That Used Animals. They’re Fantastic."
            rel="nofollow">
             <div class="featured-thumbnail"><img width="590" height="200"
-                                                 src="./Viral Nova - Trending Stories and Pictures Around the Web_files/funny-dog-ads-590x200.jpg"
+                                                 src="../static/image/home/funny-dog-ads-590x200.jpg"
                                                  class="attachment-featured wp-post-image"
                                                  alt="1.) Hopefully not a realistic representation." title=""></div>
         </a>
@@ -11046,7 +10960,7 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
            title="This Bird Was Outcasted By His Parents And Ignored. That’s Why What Happened Afterwards Is So Amazing."
            rel="nofollow">
             <div class="featured-thumbnail"><img width="590" height="200"
-                                                 src="./Viral Nova - Trending Stories and Pictures Around the Web_files/bird_benny-590x200.png"
+                                                 src="../static/image/home/bird_benny-590x200.png"
                                                  class="attachment-featured wp-post-image" alt="bird_benny" title="">
             </div>
         </a>
@@ -11084,7 +10998,7 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
            title="Everyone Must Know These 17 Brilliant Bathroom Hacks. You Will Conquer Using Public Restrooms."
            rel="nofollow">
             <div class="featured-thumbnail"><img width="590" height="200"
-                                                 src="./Viral Nova - Trending Stories and Pictures Around the Web_files/enhanced.buzz_.5604.1401818599.10-590x200.jpg"
+                                                 src="../static/image/home/enhanced.buzz_.5604.1401818599.10-590x200.jpg"
                                                  class="attachment-featured wp-post-image" alt="8. Ahh, smart."
                                                  title=""></div>
         </a>
@@ -11121,7 +11035,7 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
            title="These 25 Insanely Embarrassing Mistakes In History Will Leave You Scratching Your Head."
            rel="nofollow">
             <div class="featured-thumbnail"><img width="590" height="200"
-                                                 src="./Viral Nova - Trending Stories and Pictures Around the Web_files/2519-610x360-590x200.jpg"
+                                                 src="../static/image/home/2519-610x360-590x200.jpg"
                                                  class="attachment-featured wp-post-image"
                                                  alt="6. NASA accidentally taping over the moonlanding. In fact, there are no known original recordings of the event."
                                                  title=""></div>
@@ -11159,7 +11073,7 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
         <a href="http://www.viralnova.com/pool-repairmans-miracle/"
            title="What This Pool Repairman Did After Finding A Drowned Squirrel Is Amazing. A Must See." rel="nofollow">
             <div class="featured-thumbnail"><img width="590" height="200"
-                                                 src="./Viral Nova - Trending Stories and Pictures Around the Web_files/Screen-Shot-2014-06-05-at-3.24.12-PM-590x200.png"
+                                                 src="../static/image/home/Screen-Shot-2014-06-05-at-3.24.12-PM-590x200.png"
                                                  class="attachment-featured wp-post-image"
                                                  alt="Screen-Shot-2014-06-05-at-3.24.12-PM" title=""></div>
         </a>
@@ -11196,7 +11110,7 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
            title="Can You Tell Where This Guy Is? Because He Just Shattered The Record For Craziest Selfie Ever."
            rel="nofollow">
             <div class="featured-thumbnail"><img width="590" height="200"
-                                                 src="./Viral Nova - Trending Stories and Pictures Around the Web_files/ultimate.selfie.brazil.christ.statue.rio_.thompson.1-590x200.jpg"
+                                                 src="../static/image/home/ultimate.selfie.brazil.christ.statue.rio_.thompson.1-590x200.jpg"
                                                  class="attachment-featured wp-post-image"
                                                  alt="ultimate.selfie.brazil.christ.statue.rio.thompson.1" title="">
             </div>
@@ -11234,7 +11148,7 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
            title="21 People Who Solved Their Problems In Ridiculously Hilarious Ways. I Hate To Admit It, But #6 = Genius."
            rel="nofollow">
             <div class="featured-thumbnail"><img width="590" height="200"
-                                                 src="./Viral Nova - Trending Stories and Pictures Around the Web_files/ridiculous-solutions19-590x200.jpg"
+                                                 src="../static/image/home/ridiculous-solutions19-590x200.jpg"
                                                  class="attachment-featured wp-post-image"
                                                  alt="19.) Mmm, smells like Wal Mart." title=""></div>
         </a>
@@ -11270,7 +11184,7 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
         <a href="http://www.viralnova.com/unique-animals-are-extinct/"
            title="You’ll Love These 17 Unique, Beautiful Animals… Until You Learn The Truth About Them." rel="nofollow">
             <div class="featured-thumbnail"><img width="590" height="200"
-                                                 src="./Viral Nova - Trending Stories and Pictures Around the Web_files/unique-animals-590x200.jpg"
+                                                 src="../static/image/home/unique-animals-590x200.jpg"
                                                  class="attachment-featured wp-post-image" alt="unique animals"
                                                  title=""></div>
         </a>
@@ -11594,33 +11508,8 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
                 </div>
             </div>
             <div style="display: none;"><img
-                    src="./Viral Nova - Trending Stories and Pictures Around the Web_files/displays.htm" alt=""></div>
+                    src="../static/js/file/displays.htm" alt=""></div>
         </form>
-        <script type="text/javascript">
-            <!--
-            (function () {
-                var IE = /*@cc_on!@*/false;
-                if (!IE) {
-                    return;
-                }
-                if (document.compatMode && document.compatMode == 'BackCompat') {
-                    if (document.getElementById("af-form-765836888")) {
-                        document.getElementById("af-form-765836888").className = 'af-form af-quirksMode';
-                    }
-                    if (document.getElementById("af-body-765836888")) {
-                        document.getElementById("af-body-765836888").className = "af-body inline af-quirksMode";
-                    }
-                    if (document.getElementById("af-header-765836888")) {
-                        document.getElementById("af-header-765836888").className = "af-header af-quirksMode";
-                    }
-                    if (document.getElementById("af-footer-765836888")) {
-                        document.getElementById("af-footer-765836888").className = "af-footer af-quirksMode";
-                    }
-                }
-            })();
-            -->
-        </script>
-
         <!-- /AWeber Web Form Generator 3.0 -->
         <br><br>
 
@@ -11656,7 +11545,7 @@ DIV.trc_autoplaylist-box .nextup .video-label-box {
                     </a>
 
                     <div class="sidebar-social-widget fb-like">
-                        <iframe src="./Viral Nova - Trending Stories and Pictures Around the Web_files/saved_resource.htm"
+                        <iframe src="../static/js/file/saved_resource.htm"
                                 scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;"
                                 allowtransparency="true"></iframe>
                     </div>
