--- a/static/css/home/style.css
+++ b/static/css/home/style.css
@@ -175,11 +175,11 @@ nav select {
     display: none;
 }
 .main-navigation {
-    background: url("images/nav_bg.png") repeat scroll 0 0 #494951;
+    background: url("../../image/home/nav_bg.png") repeat scroll 0 0 #494951;
     box-shadow: 0 1px 0 #222222 inset, 0 -1px 2px #222222 inset, 0 -1px 15px #222222;
 }
 .main-navigation .sub-menu li, .main-navigation .children li {
-    background: url("images/nav_bg.png") repeat scroll 0 0 #494951;
+    background: url("../../image/home/nav_bg.png") repeat scroll 0 0 #494951;
 }
 .main-navigation .menu a {
     border-right: 1px solid #3D3D3D;
@@ -352,17 +352,17 @@ nav select {
     text-decoration: none;
 }
 .thetime {
-    background: url("images/thetime.png") no-repeat scroll left center rgba(0, 0, 0, 0);
+    background: url("../../image/common/thetime.png") no-repeat scroll left center rgba(0, 0, 0, 0);
     float: left;
     padding: 0 15px 0 20px;
 }
 .thecategories {
-    background: url("images/thecategories.png") no-repeat scroll left center rgba(0, 0, 0, 0);
+    background: url("../../image/common/thecategories.png") no-repeat scroll left center rgba(0, 0, 0, 0);
     float: left;
     padding: 0 15px 0 20px;
 }
 .thecomments {
-    background: url("images/thecomments.png") no-repeat scroll left center rgba(0, 0, 0, 0);
+    background: url("../../image/common/thecomments.png") no-repeat scroll left center rgba(0, 0, 0, 0);
     padding: 0 15px 0 20px;
 }
 .headline_meta a:hover {
@@ -1725,7 +1725,7 @@ pre {
     position: relative;
 }
 .toggle .togglet span, .toggle .toggleta span {
-    background: url("images/toggle-down.png") no-repeat scroll left center rgba(0, 0, 0, 0);
+    background: url("../../image/home/toggle-down.png") no-repeat scroll left center rgba(0, 0, 0, 0);
     color: #888888;
     display: block;
     font-size: 14px;
