--- a/templates/Home.html
+++ b/templates/Home.html
@@ -4,16 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="max-width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="谷格传递的是有趣,有爱,有价值故事,谷格网大家都喜欢.">
+    <meta name="keywords" content="谷格,格子,友爱,有趣,奇闻,奇闻异事,异事,小动物,天涯海角,有价值,故事">
     <meta name="p:domain_verify" content="61ac8ca0e840dfc3dba6f0210a3baa59">
 
-    <title>Viral Nova - Trending Stories and Pictures Around the Web</title>
+    <title>谷格传递的是有趣,有爱,有价值故事,谷格网大家都喜欢.</title>
     <link rel="icon" href="../static/image/favicon.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="../static/image/home/apple-touch-icon.png">
-    <link rel="stylesheet" type="text/css" media="all" href="../static/css/home/style.css">
+    <link rel="stylesheet" type="text/css" media="all" href="../static/css/common/style.css">
     <link rel="stylesheet" type="text/css" media="all" href="../static/css/home/home.css">
-    <link rel="stylesheet" id="share_modal-css" href="../static/css/home/modal.css" type="text/css" media="all">
+    <link rel="stylesheet" id="share_modal-css" href="../static/css/common/modal.css" type="text/css" media="all">
 </head>
 <body class="home blog main cat-3-id">
     <div id="fb-root"></div>
@@ -22,12 +22,11 @@
             <header id="header">
                 <h1 id="logo">
                     <a href="#">
-                        <img src="../static/image/home/ViralNova1.png" alt="Viral Nova">
+                        <img style="margin-bottom: 15px;" src="../static/image/common/backTop.gif" alt="Googleler">
+                        <img style="width: 178px;margin-bottom: 15px;" src="../static/image/common/logo.jpg" alt="Googleler">
+                        <img src="../static/image/home/ad.jpg" width="728" height="90"/>
                     </a>
                 </h1>
-                <div style="float: right;">
-                    <img src="../static/image/home/ad.jpg" width="728" height="90"/>
-                </div>
             </header>
         </div>
     </div>
