--- a/templates/Offline.html
+++ b/templates/Offline.html
@@ -1,55 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html itemscope="" itemtype="">
 <head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="XingCloud,Shopping">
-    <meta name="description" content="XingCloud Shopping helps shoppers find and buy products across online and brick and mortar retailers.">
-    <link rel="shortcut icon" type="image/ico" href="../static/image/favicon.png"/>
-    <title>XingCloud Shopping</title>
-    <link rel="stylesheet" href="../static/css/bootstrap/bootstrap.css"/>
-    <link rel="stylesheet" href="../static/css/bootstrap/carousel.css"/>
-    <script type="text/javascript" data-main="./home" src="../static/js/seajs/sea.js" ></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="max-width=device-width, initial-scale=1.0">
+    <meta name="description" content="谷格传递的是有趣,有爱,有价值故事,谷格网大家都喜欢.">
+    <meta name="keywords" content="谷格,格子,友爱,有趣,奇闻,奇闻异事,异事,小动物,天涯海角,有价值,故事">
+    <meta name="p:domain_verify" content="61ac8ca0e840dfc3dba6f0210a3baa59">
+
+    <title>谷格传递的是有趣,有爱,有价值故事,谷格网大家都喜欢.</title>
+    <link rel="icon" href="../static/image/favicon.png" type="image/x-icon">
 </head>
-<body>
-    <div class="navbar-wrapper">
-        <div class="container">
-
-            <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#">Project name</a>
-                    </div>
-                    <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b
-                                        class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
+<body class="home blog main cat-3-id">
+Offline...
 </body>
-
 </html>
